# OTA_update_AVR_using_ESP32

./: CMakeLists.txt
components/avr_flash/: avr_flash.c
components/avr_flash/include/: avr_flash.h
components/avr_pro_mode/: avr_pro_mode.c
components/avr_pro_mode/include/: avr_pro_mode.h
components/hex_parser/: hex_parser.c
